--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
 .App {
   text-align: center;
+  width: 960px;
+  margin: 0 auto;
 }
 
-.App-logo {
+.App p {
+  line-height: 30px;
+}
+
+/* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
@@ -30,4 +36,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
